Added support for post transformation